CSS/styles.css
/**********  Global  **********/

html {
  box-sizing: border-box;
}

:root {
  --gainsboro: #d7dae5;
  --blue-pewter: #859ca0;
  --lime: #c7fc49;
  --light-lime: rgba(199, 252, 73, 0.1);
  --violet: #30265c;
  --ivory: #edf2e6;
  --brown: #855E23;
  --teal: #567d91;
  --dark-violet: #1E183A;
  --danger: #C73A3E;
  --bistre: rgba(166, 117, 43, 0.33);
  --light-silver: #DEDEDE;
  --light-blue: rgba(133, 156, 160, 0.2);
}

*, *:before, *:after {
  box-sizing: inherit;
}

body {
    background-color: var(--blue-pewter);
    color: black;
    font-family: Garamond, serif;
    font-size: 18px;
    margin: 0;
    position: relative;
    height: 1500px;
}

h1 {
  font-size: 70px;
}

h2 {
  font-size: 35px;
  margin-top: 0;
  margin-bottom: 0px;
}

h3 {
  margin: 30px 0 0 0;
}

h4 {
  margin: 11px auto;
}

h5 {
  margin: 0;
  font-size: 18px;
  font-weight: 600;
}

h1, h2 {
  font-weight:700;
  font-family: Helvetica, sans-serif;
}

p {
  line-height: 1.5;
  margin: 11px 0 0px 0;
}

a {
  background: none;
  color: var(--gainsboro);
  text-decoration: none;
  text-shadow: 2px 1px 3px var(--violet), 2px 2px 2px var(--teal);
}

.content-wrap {
  max-width: 950px;
  margin: 0 auto;
  padding: 60px 50px;
  overflow: hidden;
}

.container {
  display: grid;
  grid-template-columns: minmax(250px, 400px) minmax(400px, 800px);
  grid-gap:10px;
}

.row {
  display: flex;
  flex-wrap: wrap;
  padding: 0;
  margin-right: 0px;
  margin-left: 0;
}

/**********  Header  **********/
header {
  font-weight: 500;
  padding-top: 50px;
  position: relative;
}

header h1,
header h2 {
  color: var(--dark-violet);
  margin: 0;
}

.heading {
  display: flex;
}

.missions {
  flex-basis: 530px;
}

.profile {
  display: block;
  max-height: 175px;
  max-width: 175px;
  height: auto;
  width: auto;
  border-radius: 55%;
}

.prof-pic {
  padding-left: 2px;
  padding-right: 2px;
  flex-basis: 270px;
  flex-shrink: 4;
}

.download {
  position: absolute;
  right: 0;
  bottom: 0;
}

#oblique {
  font-style: oblique;
  font-weight: bold;
  font-size: 22px;
}


/*****  Navigation  *****/
nav {
  background-color: var(--violet);
  margin-bottom: 5px;
  text-align: center;
  top: 0;
  left: 0;
  right: 0;
}

nav a {
  display: inline-block;
  padding: 12px 20px;
  font-weight: bold;
  text-decoration: none;
  text-transform: uppercase;
}

nav a:hover, .active {
  color: whitesmoke;
  text-shadow: none;
  background-color: var(--teal);
}

#brand {
  display: inline-block;
  padding: 9px 20px;
  font-weight: bold;
  text-decoration: none;
  text-transform: uppercase;
  margin-right: 12px;
  color: var(--gainsboro);
  text-shadow: 3px 2px 11px var(--lime);
}

.brand {
  color: whitesmoke;
  font-size: 2rem;
}

.navbar {
  position: fixed;
  padding: 0 0rem 0 0rem;
}

.nav-link {
  font-size: 19px;
}

/*****  Download Button  *****/
.btn {
  text-decoration: none;
  font-family: "Helvetica", sans-serif;
  font-size: 15px;
  font-weight: 600;
  color: var(--violet);
  border: 1px solid var(--violet);
  box-shadow: -2px -3px 16px var(--teal);
  background-color: var(--ivory);
  display: inline-block;
  padding: 6px;
  text-shadow: none;
}

.btn:hover {
  color: var(--ivory);
  background-color: var(--teal);
  box-shadow: 2px 3px 4px var(--violet);
}


/**********  Footer  **********/
footer {
  text-align:center;
}

.content-info a {
  color: var(--brown);
  background-color: var(--gainsboro);
  padding: 5px 15px;
  margin-top: 10px;
  margin-right: 15px;
  display: inline-block;
  font-size: 25px;
  box-shadow: 3px 3px 5px var(--dark-violet);
 }

 .content-info a:hover {
   color: var(--ivory);
   box-shadow: none;
   border: 1px solid var(--dark-violet);
   background-color: var(--teal);
 }

 #Contact h2 {
   color: var(--violet);
 }

 header, footer {
   background-color: var(--ivory);
   color: var(--brown);
}

#ski-link {
  color: var(--violet);
    text-shadow: 5px 4px 13px var(--brown), 1px 1px 6px var(--violet);
    margin-left: 38px;
}

#ski-link:hover {
  text-shadow: 3px -3px 19px var(--violet);
  color: lime;
  text-decoration: none;
  font-weight: bold;
}

/**********  Work Experience  **********/
h3 ~ p {
  margin: 0;
}

.Ucase {
  text-transform: uppercase;
}

.work {
  background-color: var(--lime);
  background-image: radial-gradient(farthest-side at 83% 16%, rgba(255,255,255,0.68) , var(--lime) 90%);
}

.job-description {
  margin-bottom: 25px;
}

.job-description p:first-of-type {
  margin-top: 30px;
}

.job-title {
  margin-bottom: 5px;
  font-style: italic;
  font-size: 1.2em;
  font-weight: bold;
}

.work-list {
  margin-top: 7px;
}

#img-ninth {
  margin-left: 25px;
  margin-bottom: 0;
  object-fit: cover;
}

.projects {
  background-color: var(--blue-pewter);
  background-image: radial-gradient(farthest-side at 83% 126%, rgba(255,255,255,0.68) , var(--blue-pewter) 90%);

}


/**********  Education  **********/
.h-style {
  font-family: Helvetica, sans-serif;
  font-size: 1.17em;
  font-weight: 600;
}

p + h3 {
  margin-top: 30px;
}

.shrink1, .shrink2 {
  margin-top: 15px;
}

.courses {
  margin: 5px auto;
  clear: left;
 }

.education {
  background: linear-gradient(var(--light-blue), var(--bistre)),
  url(../images/mountaintop-education.jpg) no-repeat fixed;
  background-size: cover;
}

.tighten {
  margin-top: 17px;
}

.ed-desc {
  font-size: 18px;
  font-weight: bold;
}

ul h5:first-child {
  margin-top: 19px;
}

ul.shrink1 h5 {
  margin-top: 0;
}

.column {
  flex: 20%;
  max-width: 20%;
  padding: 0px;
  flex-wrap: wrap;
}

.sidebside {
  float: left;
  list-style: none;
  background: url("../images/check-mark-blue-svg.svg") no-repeat center left;
  margin: 0 15px 10px 15px;
  padding-left: 25px;
}

li.sidebside:first-of-type {
  margin-left: 0;
}

a.ed-link {
  color: var(--violet);
  text-shadow: 2px 2px 7px var(--ivory);
}

li.courses a:hover {
  color: var(--lime)
}

.skill-badge {
  float: left;
  list-style-type: none;
  background: url("../images/check-mark-blue-svg.svg") no-repeat center left;
  margin: 0 15px 10px 15px;
  padding-left: 25px;
  text-shadow: 2px 3px 6px #f7f7f2;
}

.cal {
  color: var(--teal);
}

.tut-prog {
  margin-left: -15px;
}
a.ed-link:hover {
  text-decoration: none;
  color: var(--violet);
}

#assess-label {
  margin-bottom: 9px;
}

#w3-head {
  margin: 20px 0 10px 0;
}

#left-align {
  margin-left: 0px;
  padding-left: 3px;
}
/*****  Thumbnail Hover Effects  *****/
.cert-sm {
  border-radius: 2px;
  cursor: pointer;
  transition: 0.2s;
  margin-bottom: 10px;
}

.cert-sm:hover {
  opacity: 0.9;
  box-shadow: 0 0 2px 1px black;
}

/**********  The Modal  **********/
.modal1 {
  display: none;
  position: fixed;
  z-index: 1;
  padding-top: 100px;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: var(--violet);
}

/*****  Modal Content (Image) *****/
.modal-inner1 {
  margin: auto;
  display: block;
  width: 80%;
  max-width: 700px;
}

.modal-inner2 {
  margin: auto;
  display: block;
  height: 80%;
  max-height: 700px;
}

/*****  Caption of Modal Image  *****/
#caption, #caption2 {
  margin: auto;
  display: block;
  width: 80%;
  max-width: 700px;
  text-align: center;
  color: var(--light-silver);
  padding: 10px 0;
  height: 150px;
}

/*****  Add Animation  *****/
.modal-inner1, .modal-inner2, #caption, #caption2 {
  animation-name: zoom;
  animation-duration: 1.3s;
}

@keyframes zoom {
  from {transform: scale(0.1)}
  to {transform: scale(1) rotate(360deg)}
}

/*****  Close Button  *****/
.exit, .exit2 {
  position: absolute;
  top: 20px;
  right: 35px;
  color: var(--light-silver);
  font-size: 55px;
  font-weight: bold;
  transition: 0.3s;
}

.exit:hover, .exit:focus, .exit2:hover, .exit2:focus {
  color: #bbb;
  text-decoration: none;
  cursor: pointer;
  text-shadow: 0 0 2px 1px rgba(200,0,0,0.5);
}


/**********  Media Queries  **********/

@media (max-width: 489px) {
  .profile {
    max-width: 130px;
  }
}

@media (max-width: 607px) {
  .profile {
    max-width: 150px;
  }
}

@media only screen and (max-width: 700px) {
  .modal-inner1 {
    width: 100%;
  }
}

@media (max-width: 725px) {
 .prof-pic {
   max-width: 165px;
  }
}

@media(max-width: 800px) {
 .heading {
   flex-wrap: wrap;
   text-align: center;
   justify-content: space-around;
   }

 .prof-pic {
   order: -1;
  }
}

@media (max-width: 903px) {
  .profile {
    max-width: 175px;
  }
}

@media (max-width: 975px) {
 .shrink1 {
   margin-top: 19px;
   margin-bottom: 0px;
   }

  .shrink2 {
     margin-top: 0px;
     margin-bottom: 0px;
     }



  .img-att {
    margin-top: 23px;
  }
}

@media (max-width: 992px) {
  .column {
    flex: 30%;
    max-width: 30%;
  }
}

@media (max-width: 730px) {
 .container {
   grid-template-columns: 1fr;
  }

  .img-att {
    margin: 0;
    padding: 0;
  }

  .column {
    flex: 20%;
    max-width: 20%;
  }

  .img-att {
    margin-top: 23px;
  }
}
@media (max-width: 540px) {
  .column {
    flex: 50%;
    max-width: 50%;
  }
}

@media (min-width: 725px) {
 .heading {
   flex-wrap: wrap;
   justify-content: flex-start;
   text-align: left;
  }
}

@media (max-width: 895px) {
  .sidebside {
    margin-left: 0px;
  }
}

@media (min-width: 920px) {
 .col-narrow {
   width: 30%;
   float: left;
   margin: 0;
}

 .col-wide {
   width: 69%;
   float: left;
   padding-left: 2px;
   margin: 0;
 }
}

@media (min-width: 992px) {
 .container2 {
   display: grid;
   grid-template-columns: minmax(250px, 400px) minmax(300px, 1fr);
   grid-gap: 10px;
   }
}



@media only screen and (min-width: 1100px) {
  h1 {
    font-size: 75px;
  }
  h2 {
    font-size: 37px;
  }
  body {
    font-size: 19px;
  }
}

